about page, payment progress

--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
   "react-dotenv": {
     "whitelist": [
       "SQUARE_ID",
-      "SQUARE_LOCATION_ID"
+      "SQUARE_ID_PROD",
+      "SQUARE_LOCATION_ID",
+      "SQUARE_LOCATION_ID_PROD",
+      "ENV"
     ]
   }
 }
